--- a/style.css
+++ b/style.css
@@ -1,25 +1,72 @@
-
-.Background-black {
-  background-image: url("images/space background.png");  
-  height:1000px;
-  position: relative;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+body{
+    overflow-x: hidden;
 }
 
-.bg-gradient {
-  height: 100vh;
-  width: 100%;
-  background-image: linear-gradient(#011b3c, #00d5ff);
+.paralax{
+    position: absolute;
+    height: 100%;
 }
 
-.background-blue {
-  height: 2000vh;
-  width: 100%;
-  background: #00d5ff;
+.paralax-item{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
-.spaceimg {
-  
+.p-item1{
+    background: url("images/m_1.png") center/cover no-repeat;
+    z-index: 1;
 }
+
+.p-item3{
+    background: url("images/m_3.png") bottom/100% no-repeat;
+    background-size: cover;
+    background-position: center;
+    z-index: 2;
+}
+
+
+.p-item5{
+  background: url("images/Blackscreen.jpg");
+  z-index: 0;  
+}
+
+
+.container{
+    position: relative;
+    z-index: 1;
+    max-width: 1140px;
+    margin: 0 auto;
+    margin-top: 100vh;
+
+}
+
+.content-header{
+    font-family: sans-serif;
+    color: white;
+    text-align: center !important;
+    text-transform: uppercase;
+    margin-right: -20%;
+}
+
+.content-header h1{
+  font-size: 120px;
+  font-weight: 600px;
+  color: white;
+  margin-bottom: -40px;
+}
+
+.content-header h2{
+  font-size: 40px;
+  font-weight: 500;
+  color: white;
+}
+
+.content {
+  width: 200px;
+  height: auto;
+  margin-right: 40px;
+}
+
